# chess-engine

./: Cargo.toml  README.md
src/: api.rs  board.rs  fen.rs  lib.rs  move.rs  moves.rs  piece.rs  position.rs  search.rs
