[package]
name = "libchess"
description = "A simple chess library written in Rust"
version = "0.1.0"
authors = ["Teresa <https://github.com/ComradeYellowCitrusFruit>"]
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/ComradeYellowCitrusFruit/chess-engine"
keywords = ["chess"]
include = ["/src", "/LICENSE.md"]

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"

[profile.dev]
opt-level = 0
overflow-checks = false
lto = true
debug = true

[profile.release]
opt-level = 2
overflow-checks = false
lto = true

[lib]
name = "libchess"
path = "src/lib.rs"
crate-type = ["lib"] 
